--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -27,10 +27,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title style="background-color:grey;">React App</title>
+    <title style="background-color:grey ">React App</title>
   </head>
 
-  <body style="background-color:grey;">
+  <body style="background-color:grey ;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
